--- a/Parallel-Minimax-Mancala.cabal
+++ b/Parallel-Minimax-Mancala.cabal
@@ -5,12 +5,53 @@ build-type:          Simple
 
 executable parallel-minimax-mancala
   main-is:           Main.hs
-  build-depends:     base ^>=4.14.3.0
+  hs-source-dirs:    src
+  build-depends:     
+      base >= 4.14 && < 4.20
+      , containers         
+      , array              
+      , parallel           
+      , transformers       
+      , deepseq           
+      , silently
+  default-language:  Haskell2010
+  other-modules:     
+      GameState
+      , GameLogic
+      , MiniMax
+      , Display
+      , Run
+
+library
+  exposed-modules:   
+      GameState
+      , GameLogic
+      , MiniMax
+      , Display
+      , Run
+  build-depends:     
+      base >= 4.14 && < 4.20
+      , containers
+      , array
+      , parallel
+      , transformers
+      , deepseq
+      , silently
   hs-source-dirs:    src
   default-language:  Haskell2010
 
-library
-  exposed-modules:   GameState, GameLogic, Minimax, Display, Run
-  build-depends:     base ^>=4.14.3.0
-  hs-source-dirs:    src
-  default-language:  Haskell2010
+test-suite QuickTest
+  type:                exitcode-stdio-1.0
+  main-is:             QuickTest.hs
+  hs-source-dirs:      test
+  build-depends:       
+      base >= 4.14 && < 4.20
+      , Parallel-Minimax-Mancala
+      , HUnit
+      , containers
+      , parallel
+      , transformers
+      , deepseq
+      , silently
+  default-language:    Haskell2010
+  other-modules:       DisplayTest, GameLogicTest, GameStateTest, MiniMaxTest, RunTest, MainTest
