--- a/Parallel-Minimax-Mancala.cabal
+++ b/Parallel-Minimax-Mancala.cabal
@@ -42,7 +42,7 @@ library
 
 test-suite QuickTest
   type:                exitcode-stdio-1.0
-  main-is:             QuickTest.hs
+  main-is:             Main.hs
   hs-source-dirs:      test
   build-depends:       
       base >= 4.14 && < 4.20
@@ -54,4 +54,4 @@ test-suite QuickTest
       , deepseq
       , silently
   default-language:    Haskell2010
-  other-modules:       DisplayTest, GameLogicTest, GameStateTest, MiniMaxTest, RunTest, MainTest
+  other-modules:       DisplayTest, GameLogicTest, GameStateTest, MiniMaxTest, RunTest
